--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^3.14.0",
     "axios": "^0.18.0",
     "babel-core": "7.0.0-bridge.0",
+    "ckeditor4-react": "^1.0.0-beta.2",
     "classnames": "^2.2.6",
     "d3-shape": "^1.3.0",
     "draftjs-to-html": "^0.8.4",
