--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "antd": "^3.14.0",
     "axios": "^0.18.0",
     "babel-core": "7.0.0-bridge.0",
+    "basicprimitives": "^5.5.0",
+    "basicprimitivesreact": "^5.5.0",
+    "bizcharts": "^3.5.6",
     "ckeditor4-react": "^1.0.0-beta.2",
     "classnames": "^2.2.6",
     "d3-shape": "^1.3.0",
@@ -104,10 +107,14 @@
     "start": "umi dev",
     "test": "cross-env BABELRC=none umi test",
     "prettier": "prettier --write 'src/**/*.{js,less}'",
-    "precommit": "lint-staged",
     "add-locale": "lingui add-locale",
     "extract": "lingui extract",
     "trans": "lingui extract --clean && node ./scripts/translate.js",
     "doc": "docsify serve docs"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
