--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "description": "A front-end solution for enterprise applications built upon Ant Design and UmiJS",
   "icons": [
     {
-      "src": "logo.svg",
+      "src": "lu.svg",
       "sizes": "72x72 96x96 128x128 144x144 152x152 192x192 384x384 512x512"
     }
   ]
